[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/FlipperAnimation/frame0005.png" type="Texture" id=1]
[ext_resource path="res://Objects/Flipper.gd" type="Script" id=2]
[ext_resource path="res://Sprites/FlipperAnimation/frame0014.png" type="Texture" id=3]
[ext_resource path="res://Sprites/FlipperAnimation/frame0004.png" type="Texture" id=4]
[ext_resource path="res://Sprites/FlipperAnimation/frame0000.png" type="Texture" id=5]
[ext_resource path="res://Sprites/FlipperAnimation/frame0006.png" type="Texture" id=6]
[ext_resource path="res://Sprites/FlipperAnimation/frame0002.png" type="Texture" id=7]
[ext_resource path="res://Sprites/FlipperAnimation/frame0013.png" type="Texture" id=8]
[ext_resource path="res://Sprites/FlipperAnimation/frame0012.png" type="Texture" id=9]
[ext_resource path="res://Sprites/FlipperAnimation/frame0001.png" type="Texture" id=10]
[ext_resource path="res://Sprites/FlipperAnimation/frame0007.png" type="Texture" id=11]
[ext_resource path="res://Sprites/FlipperAnimation/frame0011.png" type="Texture" id=12]
[ext_resource path="res://Sprites/FlipperAnimation/frame0015.png" type="Texture" id=13]
[ext_resource path="res://Sprites/FlipperAnimation/frame0008.png" type="Texture" id=14]
[ext_resource path="res://Sprites/FlipperAnimation/frame0010.png" type="Texture" id=15]
[ext_resource path="res://Sprites/FlipperAnimation/frame0009.png" type="Texture" id=16]
[ext_resource path="res://Sprites/FlipperAnimation/frame0003.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 0.5 )

[node name="Flipper" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 2
speed_scale = 5.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -30 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 30 )
shape = SubResource( 3 )

[connection signal="body_exited" from="." to="." method="_on_Flipper_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
